@@ -3,6 +3,8 @@ Changes made from the "0.7.1" release to the "0.7.2" release:
 
 * Bertrand Coconnier:
 
+- Function glcGetStringCharMetric() now returns metrics in global string
+  coordinates (otherwise the kerning can not be measured)
 - Fixed bug #1987563 (Kerning does not work when GLC_GL_OBJECTS is enabled)
   Thanks to GenPFault for the bug report.
 - Fixed bug #2012579 (Mac OSX Leopard compiling bug) - Thanks to Michael Strobel
